[package]
name = "qtunnel"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.10", features = ["full"] }
quinn = "0.8"
log = "0.4"
futures-util = { version = "0.3", default-features = false }
env_logger = "0.8"
serde = "1.0"
bytes = "1.0"
getopts = "0.2"
serde_derive = "1.0"
toml = "0.5"
rustls = "0.20"
rustls-pemfile = "0.2"
